--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,6 +49,7 @@ body {
     background-color: #FBFBFB;
     width: 100vw;
     margin: 0;
+    overflow-x: hidden;
 }
 
 a {
@@ -66,7 +67,7 @@ input:focus {
 }
 
 div.container {
-    width: 80vw;
+    width: 1200px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -77,11 +78,13 @@ nav {
     justify-content: space-between;
     position: sticky;
     background-color: #FBFBFB;
-    padding-top: 5vh;
+    padding: 5vh 0 35px;
+    z-index: 1;
     top: 0;
     height: 6vh;
     width: 100%;
     animation: lazyLoad 2s forwards;
+    transition: .5s;
 }
 
 nav > img {
@@ -107,6 +110,10 @@ nav .searchbar label > input {
     padding-left: 25px;
 }
 
+nav.onScroll{
+    padding: 4vh 0 25px;
+}
+
 section {
     width: 100%;
 }
@@ -121,40 +128,47 @@ section .text {
     text-shadow: 0 3px 3px black;
 }
 
-section#lookBooks {
+section#patterns {
     display: flex;
+    top: 35px;
     height: 600px;
     position: relative;
     z-index: 1;
 }
 
-section#lookBooks .text {
+section#patterns .text {
     animation: lazyLoad 2s forwards;
 }
 
-section#lookBooks h1 {
+section#patterns h1 {
     font-size: 101px;
     line-height: 1;
     margin: 0;
 }
 
-section#lookBooks h2 {
+section#patterns h2 {
     font-size: 32px;
     font-weight: lighter;
     margin-top: 0;
 }
 
-section#lookBooks a {
+section#patterns a {
     text-shadow: none;
     font-weight: bold;
     background-color: #FBFBFB;
     padding: 10px 40px;
 }
 
+a.downArrow{
+    cursor: pointer;
+    position: relative;
+    top: -70px;
+}
+
 .background-anim {
     position: absolute;
     margin-top: 15vh;
-    width: 80%;
+    width: 1200px;
     height: 600px;
     background-image: url("../img/background-zone1.png");
     background-size: cover;
@@ -169,7 +183,7 @@ section#lookBooks a {
         margin-top: 0;
     }
 
-    40% {
+    35% {
         margin-top: 0;
         width: 100%;
         height: 100%;
